<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
            <TextView
                android:id="@+id/ylist_zhigonghao"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                android:text="@string/total_zhigonghao" />

            <TextView
                android:id="@+id/ydeluser_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_name" />

            <TextView
                android:id="@+id/ydeluser_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_password" />

            <TextView
                android:id="@+id/ydeluser_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_phone" />

            <TextView
                android:id="@+id/ydeluser_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_power" />

            <CheckBox
                android:id="@+id/ydeluser_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="全选"
                android:textSize="12sp" />

</LinearLayout>
