<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.text.Midentity" >
    
    
       <LinearLayout
        android:id="@+id/midentity_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/purple"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="添加用户"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>

   <LinearLayout
            android:id="@+id/midentity_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/midentity_title"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_layout_editor_bg"
            android:orientation="vertical" >
             
              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/midentity_zhanghao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/total_name"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8" />
             
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/midentity_mima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="初始密码"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

            </LinearLayout>
              
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8" />
             
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/password"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />
                
                <EditText
                    android:id="@+id/miendtity_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="#fffbfbfb"
                    android:password="true" />
  
                </LinearLayout>
            
              <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8" />
                          
               
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="专业方向"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />
                
                <Spinner
                    android:id="@+id/m_professical_aspect1"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:background="#fffbfbfb"
                    android:singleLine="true" />

               
            </LinearLayout>
             
            
             <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8" />  
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="年龄"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/midentity_age"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="#fffbfbfb"
                    android:singleLine="true" />
                 <RelativeLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent" >
                      

                    <RadioGroup
                        android:id="@+id/m_sex_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/midentity_boy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/boy" />
                        <RadioButton
                        android:id="@+id/midentity_girl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/t_sex_1"
                        android:layout_toRightOf="@+id/t_sex_1"
                        android:text="@string/girl" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/m_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="性别"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />
                   
</RelativeLayout>
                
            </LinearLayout>
              
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8" />
            
             
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/email"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/m_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="#fffbfbfb"
                    android:singleLine="true" />
            </LinearLayout>
            
                <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8" />
                
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/phone"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/mphone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="#fffbfbfb"
                    android:singleLine="true" />
            </LinearLayout>
            
         </LinearLayout>

    <Button
        android:id="@+id/mmabutton1"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/mmabutton2"
        android:background="@color/purple"
        android:text="修改"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/mmabutton2"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/purple"
        android:text="返回"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</RelativeLayout>
